# camel-xml2dsl

./: Dockerfile  README.md  pyproject.toml  setup.cfg
src/camel_xml2dsl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/xml2dsl/: __init__.py  xml2dsl.py
tests/: camel-context.xml  test_xml2dsl.py
