[metadata]
name = camel-xml2dsl
version = 0.0.22
author = Jorge Castro
author_email = jorgecastro05@hotmail.com
description = xml definition to dsl definition routes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jorgecastro05/script-aro.git
project_urls =
    Bug Tracker = https://github.com/jorgecastro05/script-aro.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    ConfigArgParse
    rich
    lxml

[options.entry_points]
console_scripts =
    xml2dsl = xml2dsl.xml2dsl:main

[options.packages.find]
where = src
